# gemini-web-openclaw-skill

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  SUPPORT.md  docker-compose.yml  fix_ruff_unused.py  fix_ruff_unused2.py  pyproject.toml  test_refactor_idea.py  test_refactor_idea2.py  test_refactor_idea3.py  test_refactor_idea4.py  test_refactor_idea5.py  test_session_refactor2.py  test_session_refactor3.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: auth.md  docker.md  install.md  privacy.md  release-v0.1.0.md  storybook-status.md  validation.md
references/: auth-script.md  diagnostics.md  limitations.md  mode-status.md  prerequisites.md  privacy-and-diagnostics.md  public-release-checklist.md  public-release-status.md  release-evidence.md  remote-install-and-auth.md  support-matrix.md  validation.md  workflow.md
references/internal/: README.md  code-rename-plan.md  (+6 more)
scripts/: check_repo_hygiene.sh  docker-entrypoint.sh  ensure_env.sh  gemini_storybook.sh  gemini_storybook_create.sh  gemini_storybook_debug_open.sh  gemini_storybook_doctor.sh  gemini_storybook_image_create.sh  gemini_storybook_image_edit.sh  gemini_storybook_inspect_home.sh  gemini_storybook_login.sh  gemini_storybook_smoke.sh  gemini_web.sh  gemini_web_create.sh  gemini_web_debug_open.sh  gemini_web_doctor.sh  gemini_web_image_create.sh  gemini_web_image_edit.sh  gemini_web_inspect_home.sh  gemini_web_login.sh  gemini_web_smoke.sh  setup.sh  validate_install.sh
(+34 files in other folders)
